--- a/ClickParking/app/src/main/AndroidManifest.xml
+++ b/ClickParking/app/src/main/AndroidManifest.xml
@@ -10,10 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ClickParking"
+        android:theme="@style/Theme.Clickpark"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.SignupActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
